Ejercicio 2./busybox1.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: busybox
  name: busybox
spec:
  containers:
  - image: busybox1
    name: busybox
    command:
      - "sleep"
      - "3600"  
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
