Ejercicio 2./busybox2.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: busybox2
  name: busybox2
spec:
  containers:
  - image: busybox2
    name: busybox2
    command:
      - "sleep"
      - "1800"  
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
